@@ -1,5 +1,11 @@
 2008-02-07  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (ui_main_new), (about), (show_help_content):
+	changed signal handler prototypes to match the ones for the upcoming
+	GtkAction* API (noone used the GtkMenuItem anyway)
+
+2008-02-07  Sven Herzberg  <sven@imendio.com>
+
 	* src/ui/ui-main.c: (ui_main_new): add a user interface to the
 	GtkUIManager for the GNOME code
 
